<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textJudulAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/judul_add_data"
        android:textAlignment="center"
        android:textColor="@color/judul"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nama                    :"
        android:textColor="@color/text"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/editNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_nama"
        android:textColor="@color/text"/>
    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNo_tlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nomor Telepon   :"
                android:textColor="@color/text"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/editNo_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_tlp"
                android:textColor="@color/text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email                     :"
                android:textColor="@color/text"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:textColor="@color/text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alamat                  :"
                android:textColor="@color/text"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/editAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_alamat"
                android:textColor="@color/text"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginStart="155dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="30dp"
        android:background="@color/button"
        android:text="@string/btn_simpan" />
</LinearLayout>